--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,116 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .dark-mode  {
+    background-color: black;
+    min-height: 100vh;
+  }
+
+  .dark-mode h1 {
+    color:white;
+  }
+
+.container{
+  max-width: 950px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px; 
+}
+
+.note-list {
+  display: flex; 
+  flex-wrap: wrap;
+  gap: 1rem;
+  
+}
+
+.note-new{
+  background-color: aqua;
+  flex-wrap: wrap;
+  width:300px;
+  border-radius: 20px;
+  padding: 1rem;
+  min-height: 170px;
+  justify-content: space-between;
+}
+
+textarea{
+  border:none;
+  resize:none;
+  width:300px;
+  background-color: aqua;
+
+
+}
+
+
+textarea:focus {
+  outline: none;
+
+}
+
+.save{
+
+  background-color: rgb(141, 121, 121);
+  border:none;
+  border-radius: 15px;
+  padding: 5px 10px 5px 10px;
+}
+
+.save:hover {
+  background-color: rgb(235, 221, 221);
+  cursor: pointer;
+}
+
+.note:hover{
+  background-color: rgb(238, 232, 230);
+}
+
+.note {
+  background-color: rgb(171, 206, 216);
+  width:300px; 
+  border-radius: 10px;
+  padding: 1rem;
+  min-height: 170px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.note-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between ;
+}
+
+ 
+.delete-icon {
+  cursor:pointer;
+
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  background-color: rgb(211, 188, 188);
+  border-radius: 10px;
+  padding: 5px;
+  margin-bottom: 1.5rem;
+}
+
+.search input {
+  border: none;
+  background-color: rgb(211, 188, 188);
+  width: 100%
+}
+
+.search input:focus {
+  outline:  none;
+}
